# jagannath

./: .gitignore  AGENTS.md  COMPLETION_PLAN.md  Cargo.toml  IMPLEMENTATION_PLAN_v2.md  IMPLEMENTATION_ROADMAP.md  LIBRARY_ECOSYSTEM.md  LICENSE-APACHE  LICENSE-MIT  NOTICE  OPTIMIZATION_PLAN.md  POST_V91_OPTIMIZATION.md  README.md  check_errors.txt  package-lock.json  test_fn.jag  test_minimal.s  test_out.s  v1.md  v10.md  v11.md  v12.md  v13.md  v14.md  v15.md  v17.md  v19.md  v2.md  v20.md  v21.md  v22.md  v3.md  v4.md  v5.md  v6.md  v7.md  v8.md  v9.md
compiler/: Cargo.toml  a.s  build_output.txt  build_output_full.txt
compiler/benches/: compile_bench.rs
compiler/src/: lib.rs  main.rs
compiler/src/astras/: agneyastra.rs  brahmashira.rs  brahmastra.rs  garudastra.rs  indrastra.rs  mantra.rs  mod.rs  nagapasha.rs  nagastra.rs  narayanastra.rs  pashupatastra.rs  sudarshana.rs  suryaastra.rs  trishula.rs  vaishnavastra.rs  varunastra.rs  vayuastra.rs
compiler/src/ayurveda/: mod.rs
compiler/src/buddhist_logic/: mod.rs
compiler/src/codegen/: calling_conv.rs  entry.rs  linker.rs  mod.rs  regalloc.rs
compiler/src/devatas/: adityas.rs  ashvins.rs  mod.rs  rta.rs  rudras.rs  vasus.rs
compiler/src/diagnostics/: emitter.rs  mod.rs  sink.rs
compiler/src/driver/: mod.rs  options.rs  philosophy_integration.rs  session.rs
compiler/src/errors/: diagnostic.rs  error.rs  mod.rs  report.rs  rich_report.rs  span.rs
compiler/src/garuda/: mod.rs
compiler/src/jyotisha/: dasha.rs  grahas.rs  kundali.rs  mod.rs  muhurta.rs  nakshatras.rs  rashis.rs
compiler/src/lexer/: affixes.rs  dhatu.rs  mod.rs  sandhi.rs  scanner.rs  token.rs
compiler/src/life_alignment/: cosmic_compiler.rs  marga_varna_bridge.rs  mod.rs  purushartha_balancer.rs
compiler/src/macro/: hygiene.rs  mantra.rs  mod.rs
compiler/src/margas/: bhakti.rs  jnana.rs  karma.rs  mod.rs  path_selector.rs  raja_yoga.rs
compiler/src/mimamsa/: anupalabdhi.rs  arthapatti.rs  mod.rs
compiler/src/mir/: builder.rs  mod.rs  nll.rs  optimizer.rs  passes.rs  types.rs
compiler/src/modules/: graph.rs  mod.rs  resolver.rs  symbol.rs  typeck_integration.rs  visibility.rs
compiler/src/moksha/: atman.rs  avidya.rs  jiva.rs  liberation.rs  mod.rs  samsara.rs  tapas.rs
compiler/src/nava_durga/: brahmacharini.rs  chandraghanta.rs  kalaratri.rs  katyayani.rs  kushmanda.rs  mahagauri.rs  mod.rs  shailaputri.rs  siddhidatri.rs  skandamata.rs
compiler/src/parser/: ast.rs  compounds.rs  grammar.rs  mod.rs
compiler/src/philosophy/: mod.rs
compiler/src/purusharthas/: artha.rs  dharma.rs  kama.rs  mod.rs  triangle.rs
compiler/src/queries/: cache.rs  dependency.rs  mod.rs  query.rs  revision.rs
compiler/src/semantics/: borrow.rs  generics.rs  karaka.rs  lifetime.rs  mod.rs  philosophy_integration.rs  security.rs  traits.rs  typeck.rs  typeck_impl.rs
compiler/src/tantra/: cache_alignment.rs  mandala_scheduler.rs  mod.rs  sri_yantra.rs
compiler/src/traits/: cosmic.rs  enumeration.rs  mod.rs  naming.rs  optimization.rs
compiler/src/varnas/: brahmin.rs  kshatriya.rs  mod.rs  shudra.rs  vaishya.rs  varna_checker.rs
compiler/src/vedic_math/: constant_folder.rs  mod.rs
compiler/src/visitor/: ast_visitor.rs  mir_visitor.rs  mod.rs  walk.rs
compiler/src/yoga/: mod.rs
compiler/tests/: codegen_tests.rs  garuda_tests.rs  lexer_tests.rs  multiarch_tests.rs  parser_tests.rs  philosophy_tests.rs  semantics_tests.rs  traits_tests.rs
stdlib/: Cargo.toml
stdlib/src/: avartana.rs  dosha.rs  lib.rs  nama.rs
stdlib/src/aalekh/: khoj.rs  laghu_patha.rs  mod.rs  prastutikaran.rs  vriksha.rs
stdlib/src/chitran/: aakaar.rs  mod.rs  rupantar.rs  varna.rs
stdlib/src/darshana/: advaita.rs  mod.rs  nyaya.rs  samkhya.rs  yoga.rs
stdlib/src/dhwani/: mod.rs  prabhav.rs  swar.rs  taranga.rs
stdlib/src/ganita/: bija.rs  mahasankhya.rs  mod.rs  parisankhya.rs  ramanujan.rs  rekha.rs  sankhya.rs  vedic.rs
stdlib/src/gatishil/: bala.rs  gati.rs  mod.rs  sadish.rs
stdlib/src/gupta/: guptalekha.rs  mod.rs  sanketa.rs  yadrcchika.rs
stdlib/src/ishtam/: avrodh.rs  bahu.rs  eka.rs  mod.rs
stdlib/src/jaanavari/: anuwanshik.rs  mod.rs  prakriti.rs
stdlib/src/jala/: mod.rs
stdlib/src/jyamiti/: aakrti.rs  bindu.rs  kriya.rs  mod.rs
stdlib/src/jyotisha/: dasha.rs  graha.rs  mod.rs  muhurta.rs  nakshatra.rs  panchanga.rs  rashi.rs
stdlib/src/kala/: avadhi.rs  dina.rs  mod.rs  samaya.rs  vaidika.rs
stdlib/src/kosha/: mod.rs
stdlib/src/krama/: anveshan.rs  gatika.rs  kramana.rs  lekhaganita.rs  mod.rs
stdlib/src/kramana/: adhar64.rs  anvaya.rs  dvyanka.rs  mod.rs
stdlib/src/niyama/: bandha.rs  mod.rs  parikshan.rs  pratyaya.rs
stdlib/src/parikshan/: abhikathan.rs  mod.rs  tulana.rs  upahasa.rs
stdlib/src/patha/: marga.rs  mod.rs  vistar.rs
stdlib/src/prakara/: mod.rs
stdlib/src/pravaah/: bhavishya.rs  chalaka.rs  dhara.rs  mod.rs  vahaka.rs
stdlib/src/rekhaganit/: aavyuha.rs  mod.rs  sadish.rs  vighatan.rs
tools/formatter/: Cargo.toml
tools/jagc/: Cargo.toml
tools/jagdoc/: Cargo.toml
tools/lsp-server/: Cargo.toml
tools/patra/: Cargo.toml
(+254 files in other folders)
