[package]
name = "jagc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Jagannath compiler CLI tool"

[[bin]]
name = "jagc"
path = "src/main.rs"

[dependencies]
jagannath-compiler = { path = "../../compiler" }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
