[package]
name = "jagdoc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Jagannath documentation generator"

[[bin]]
name = "jagdoc"
path = "src/main.rs"

[dependencies]
jagannath-compiler = { path = "../../compiler" }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
pulldown-cmark = "0.10"
handlebars = "5.1"
