[package]
name = "jagannath-lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol implementation for Jagannath"
license = "MIT OR Apache-2.0"

[dependencies]
jagannath-compiler = { path = "../../compiler" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
