[package]
name = "patra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Jagannath package manager - पत्र (package/message)"

[[bin]]
name = "patra"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.11", features = ["json", "blocking"] }
semver = "1.0"
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
dirs = "5.0"
